Added deploy workflow

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -16,44 +16,44 @@ Välkommen till kursen Webbapplikationer för mobila enheter.
 
 <CardGrid>
 <LinkCard
-  title="kmom01 - En router"
+  title="⚠️ kmom01 - En router"
   href="/kmom/kmom01"
   description="Vi startar igång kursen genom att repetera webbkomponenter och skapa en router för navigation utan att ladda om HTML-sidan."
 />
 
 <LinkCard
-  title="kmom02 - Formulär och CRUD"
+  title="⚠️ kmom02 - Formulär och CRUD"
   href="/kmom/kmom02"
   description="Vi tar en titt på "
 />
 
 <LinkCard
-  title="kmom03 - Autentisering med JWT"
+  title="⚠️ kmom03 - Autentisering med JWT"
   href="/kmom/kmom03"
   description="Vi använder JavaScript för att skapa en varukorg och piffa till lite."
 />
 
 <LinkCard
-  title="kmom04 - Mobila enheters styrkor"
+  title="⚠️ kmom04 - Mobila enheters styrkor"
   href="/kmom/kmom04"
   description="Vi bygger ut webbshoppen med orderhantering."
 />
 
 <LinkCard
-  title="kmom05 - Real-tids kommunikation"
+  title="⚠️ kmom05 - Real-tids kommunikation"
   href="/kmom/kmom05"
   description="Vi tittar på sätt att strukturera upp vår JavaScript för återvinning."
 />
 
 <LinkCard
-  title="kmom06 - Progressive Web Applications"
+  title="⚠️ kmom06 - Progressive Web Applications"
   href="/kmom/kmom06"
   description="Hur kan vi använda AI för att förbättra användarupplevelsen?"
 />
 </CardGrid>
 
 <LinkCard
-  title="kmom10 - projekt"
+  title="⚠️ kmom10 - projekt"
   href="/kmom/kmom10"
   description="Vi skapar en app med förseningar i den Svenska Tågtrafiken."
 />
