--- a/src/content/docs/kunskap/en-router-i-javascript.mdx
+++ b/src/content/docs/kunskap/en-router-i-javascript.mdx
@@ -35,7 +35,7 @@ Vår router ska göra så att vi kan byta mellan olika vyer i vår applikation o
 
 
 
-En router komponent {#router-component}
+En router komponent
 --------------------------------------
 
 Vi börjar med att skapa filen `router.js` som kommer innehålla komponenten som hanterar routingen i vår applikation. Vi skapar detta som en "vanlig" web component. Jag lägger till lite kod så att vi ser att allting fungerar när vi lägger till den i `main.js` och sedan i `index.html`.
