--- a/src/content/docs/kunskap/ett-mobilanpassad-formular.mdx
+++ b/src/content/docs/kunskap/ett-mobilanpassad-formular.mdx
@@ -210,7 +210,7 @@ Våra formulärfält ser nu ut enligt nedan och vi har nu samma styling trots ol
 
 
 
-Ett formulär i en web-komponent {#web-component}
+Ett formulär i en web-komponent
 --------------------------------------
 
 Låt oss då se hur vi knyter ihop lärdomar från ovan i ett web-komponent formulär i JavaScript. Vi börjar med att skapa en route i vår `Router` klass för att vi ska ha möjlighet att gå till vyn. Mitt `allRoutes`-objekt blir då.
