--- a/src/content/docs/kunskap/kamera-i-mobilen.mdx
+++ b/src/content/docs/kunskap/kamera-i-mobilen.mdx
@@ -143,7 +143,7 @@ clearphoto(canvas) {
 
 
 
-Foto API {#foto-api}
+Foto API
 --------------------------------------
 
 För att vi ska kunna spara undan bilderna behöver vi en plats att spara undan de på. Vi väljer UploadCare då det är gratis (upp till 5,000 uploads / mo, 15 GB traffic / mo, 1 GB storage) och det finns ett trevligt uppladdnings-API. Vi börjar med att gå till [webbplatsen](https://app.uploadcare.com/accounts/signup/) för tjänsten och registrerar oss. Sedan när vi har kommit in i tjänsten kopierar vi Public key från denna sidan, se till att välja API keys ute till vänster.
