--- a/src/content/docs/kmom/kmom01.mdx
+++ b/src/content/docs/kmom/kmom01.mdx
@@ -35,8 +35,6 @@ Som i andra kurser bör du ha en lokal labbmiljö innehållande:
 * En bash-terminal (WSL2 för Windows)
 * Visual Studio Code
 
-I denna kursen använder vi Git och GitHub som utgångspunkt för vår labb- och studiemiljö.
-
 Börja med att lämna in [uppgiften Github konto på Canvas](https://bth.instructure.com/courses/6413/assignments/56315) enligt videon nedan.
 
 <YouTube posterQuality="max" id="dv09UyTAnQk" />
@@ -45,7 +43,7 @@ Acceptera sedan inbjudan och använd SAML SSO inloggning för att knyta ditt Git
 
 <YouTube posterQuality="max" id="keEGqOEdpbI" />
 
- I nedanstående video visar Emil hur du kommer igång med kursen. Om du föredrar text kan du hoppa över videon, men den är starkt rekommenderat.
+I nedanstående video visar Emil hur du kommer igång med kursen. Om du föredrar text kan du hoppa över videon, men den är starkt rekommenderat.
 
 <YouTube posterQuality="max" id="47fDUCRsVf0" />
 
@@ -79,8 +77,6 @@ Veckans genomgång
 
 Emil har genomgånger måndagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
-<YouTube posterQuality="max" id="wc_c5LdvXMw" />
-
 
 
 Veckans föreläsning
@@ -88,7 +84,6 @@ Veckans föreläsning
 
 Emil har föreläsningar onsdagar kl 10:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
 
-<YouTube posterQuality="max" id="km8ea3-QHQw" />
 
 
 Läsanvisningar
@@ -110,17 +105,9 @@ Läs följande artiklar för att få bakgrunden till övningarna.
 
 
 
-### Video
-
-1. Det finns en [videoserie](https://www.youtube.com/playlist?list=PLKtP9l5q3ce_CbhJOudHjxkjYofM98kvh) kopplat till kursen, titta på videos som börjar på 0 och 1.
-
-
-
 ### Lästips
 
 1. Läs översiktligt denna samling av "best-practices" för typografi på webben [Typography Handbook](https://web.archive.org/web/20231219201010/http://typographyhandbook.com/). Spara den i dina bokmärken som en framtida referens.
-
-1. För mer om tillgänglighet (accessibility, a11y) titta in på [The A11Y Project](https://a11yproject.com/).
 
 
 
@@ -137,9 +124,11 @@ Gör följande övningar för att träna inför uppgifterna.
 
 1. Läs igenom artikeln "[Typografi i mobila enheter](/kunskap/typografi-i-mobila-enheter)". Du kan spara koden i ditt webapp-lager repo.
 
-2. Skapa en API-nyckel och produkter i ditt egna lager med hjälp av artikeln "[Introduktion till Lager-API:t](/kunskap/introduktion-till-lager-api)".
+1. I övningen "[Web Components](/kunskap/web-components)" kan du repetera web components och titta på hur vi driftsätter applikationen. Koden som byggs upp i den övningen är det som redan finns i webapp-lager repot.
 
-3. Gör övningen "[Web Components](/kunskap/web-components)". Spara resultatet i ditt kursrepo i ditt webapp-lager repo.
+1. Gör övningen "[Knappar för mobilen](/kunskap/knappar-for-mobilen)". Spara eventuella testfiler i ditt webapp-lager repo.
+
+1. Gör övningen "[En router i JavaScript](/kunskap/en-router-i-javascript)". Spara med fördel koden i ditt webapp-lager repo.
 
 
 
@@ -165,13 +154,10 @@ Skriv en redovisningstext och redovisa dina reflektioner från kursmomentet. Bes
 Se till att följande frågor besvaras i redovisningstexten som en del av din Pull Request, se videon nedan för hur du gör en inlämning.
 
 * Är du sedan tidigare bekant med utveckling av mobila appar?
-* Vilket är den viktigaste lärdomen du gjort om typografi för mobila enheter?
-* Du har i kursmomentet hämtat data från ett stycken API. Hur kändes detta?
+* Vilket är den viktigaste lärdomen du gjort om typografi och knappar för mobila enheter?
 
 TIL är en akronym för “Today I Learned” vilket leksamt anspelar på att det finns alltid nya saker att lära sig, varje dag. Man brukar lyfta upp saker man lärt sig och där man kanske hajade till lite extra över dess nyttighet eller enkelhet, eller så var det bara en ny lärdom för dagen som man vill notera.
 
 * Vilken är din TIL för detta kmom?
 
 I artikeln "[Att skriva en bra redovisningstext](https://dbwebb.se/kurser/faq/att-skriva-en-bra-redovisningstext)" finns exempel och goda råd kring att skriva bra redovisningstexter.
-
-
