--- a/src/content/docs/kunskap/en-router-i-javascript.mdx
+++ b/src/content/docs/kunskap/en-router-i-javascript.mdx
@@ -10,21 +10,17 @@ I denna övningen tittar vi på hur vi kan använda en Web Component som bas fö
 
 
 
-
-
-
-
 Förkunskaper
 --------------------------------------
 
-Du har gjort uppgiften "[Lager appen del 1](../uppgift/lager-appen-del-1)" och kan med fördel bygga vidare på den koden.
+Du har gjort en fork av webapp-lager repot och gjort övningarna [Typografi i mobila enheter](/kunskap/typografi-i-mobila-enheter) och [Knappar för mobilen](/kunskap/knappar-for-mobilen).
 
 
 
 Exempelkod
 --------------------------------------
 
-Om du skriver nedanstående kod i ditt webapp-lager repo kan du återanvända koden i uppgiften "[Lager appen del 2](../uppgift/lager-appen-del-2)".
+Om du skriver nedanstående kod i ditt webapp-lager repo kan du återanvända koden i uppgiften "[Lager appen del 1](../uppgift/lager-appen-del-1)".
 
 
 
