--- a/src/content/docs/uppgift/lager-appen-del-2.mdx
+++ b/src/content/docs/uppgift/lager-appen-del-2.mdx
@@ -9,18 +9,18 @@ revision:
 
 ![image/webapp/pick-list.png](https://dbwebb.se/image/webapp/pick-list.png)
 
-I kursmoment 1 skapade vi grunden för vår lager app. Vi ska i detta kursmoment förbättra strukturen på vår CSS kod och bygga in en router. Vi ska bygga en plocklista vy där lagerarbetarna får en bra översikt över vart produkterna från en order finns. När varorna är plockade ska status ändras för ordern och lagersaldo ska minskas.
 
 
-
-
+Introduktion
+-----------------------
+Du har blivit kontaktat av företaget Infinity Warehouses då ryktet går på stan att du har koll på mobila applikationer. Infinity Warehouses vill ta steget in i 2020-talet och automatisera deras gamla omoderna lagerhanteringssystem. Infinity Warehouses har tidigare anställd en backend programmerare, men när hen hörde orden design, användbarhet och tillgänglighet sprang hen skrikande bort. Backend programmeraren hade dock hunnit skapa ett REST API innan hen försvann ner i serverrummet. [Dokumentationen för API:t](https://lager.emilfolino.se/v2) hjälper dig en bit på vägen.
 
 
 
 Förkunskaper
 -----------------------
 
-Du har gjort uppgiften [Lager appen del 1](../uppgift/lager-appen-del-1). Du har jobbat dig igenom övningarna [Knappar för mobilen](../kunskap/knappar-for-mobilen) och [En router i JavaScript](../kunskap/en-router-i-javascript).
+Du har jobbat dig igenom övningarna [Web Components](/kunskap/web-components), [Knappar för mobilen](../kunskap/knappar-for-mobilen) och [En router i JavaScript](../kunskap/en-router-i-javascript).
 
 
 
@@ -34,18 +34,18 @@ Använd lager [API:t](https://lager.emilfolino.se/v2) dokumentationen och specie
 Krav
 -----------------------
 
-1. Strukturera din CSS kod, så du har olika moduler för dina komponenter med hjälp av CSS preprocessorn SASS .
+1. Skapa en vy där lagerarbetarna ser alla ordrar redo för att packas, dvs. ordrar med status ny.
 
-2. Skapa en vy där lagerarbetarna ser alla ordrar redo för att packas, dvs. ordrar med status ny.
+1. Vyn visar alla varor i en order, hur många som ska plockas och vart varan finns.
 
-3. Vyn visar alla varor i en order, hur många som ska plockas och vart varan finns.
+1. Gör en kontroll om det finns tillräckligt många av varan för att den kan packas.
 
-4. Gör en kontroll om det finns tillräckligt många av varan för att den kan packas.
+1. Om det finns tillräckligt många produkter ska det finnas en möjlighet att byta status för ordern med en knapp. Byt till status Packad.
 
-5. Om det finns tillräckligt många produkter ska det finnas en möjlighet att byta status för ordern med en knapp. Byt till status Packad.
+1. När status för ordern ändras måste även lagersaldot för de packade varorna minskas. Viktigt att du gör ändringar för en produkt (`products`-endpointen) och inte för orderraderna.
 
-6. När status för ordern ändras måste även lagersaldot för de packade varorna minskas. Viktigt att du gör ändringar för en produkt (`products`-endpointen) och inte för orderraderna.
+1. Gör ett medvetet val om du vill använda flat design eller ej.
 
-7. Gör ett medvetet val om du vill använda flat design eller ej.
+1. Se till att det går att testa din app. Lägg till minst en order med en produkt som går att packa.
 
-8. Se till att det går att testa din app. Lägg till minst en order med en produkt som går att packa.
+1. Driftsätt applikationen på Github Pages enligt [Driftsättning](/kunskap/web-components#driftsättning).
