--- a/src/content/docs/uppgift/lager-appen-del-5.mdx
+++ b/src/content/docs/uppgift/lager-appen-del-5.mdx
@@ -1,49 +1,35 @@
 ---
-title: Lager appen del 5
 author: efo
 category: javascript
+title: Lager Appen del 6
 revision:
-  "2024-02-16": (C, efo) Uppdaterad inför VT24. La ihop 05 och 06.
-  "2023-04-03": (B, efo) Uppdaterad för webapp-v5.
-  "2018-03-01": (A, efo) Första utgåvan i samband med kursen webapp v3.
+  "2024-02-16": (A, efo) Första utgåvan i samband med kursen webapp VT24.
 ---
 
-![image/webapp/world-map.jpg](https://dbwebb.se/image/webapp/world-map.jpg)
-
-Vi ska i denna uppgiften använda oss av Web-API:s för att komma åt native-funktionalitet i våra fysiska mobila enheter. Vi använder en mobil enhets styrka och läggar till funktionalitet för GPS, kartor och kamera.
+Vi avslutar vår Lager-app med en kundservice chatt.
 
 
 
 Förkunskaper
 -----------------------
-Du har gjort uppgiften [Lager appen del 4](../uppgift/lager-appen-del-4). Du har jobbat dig igenom övningarna "[Animationer och övergångar](../kunskap/animationer-och-overgangar)", "[GPS och karta v3](../kunskap/gps-och-karta)" och "[Kamera i mobilen](../kunskap/kamera-i-mobilen)".
-
-
-
-Introduktion
------------------------
-
-Använd lager [API:t](https://lager.emilfolino.se/v2) dokumentationen och speciellt sektionen om ordrar. Här kan du hämta ut alla ordrar.
+Du har gjort uppgiften [Lager appen del 5](../uppgift/lager-appen-del-5). Du har jobbat dig igenom övningen "[Real-tids chatt](../kunskap/real-tids-chatt)".
 
 
 
 Krav
 -----------------------
 
-1. Använd animationer och övergångar för att efterlikna native applikationer.
+1. Skapa möjlighet för att chatta i real-tid via chatt-servern lager-chat.emilfolino.se
 
-2. Skapa en vy i din app med de ordrar som är redo att skickas. Dvs. ordrar med status Packad (200).
+2. Först ska användaren skriva in ett användarenamn och sedan kunna skicka meddelanden via chatten. Skicka data till chatt servern i JSON format med följande struktur, så alla vet hur data ska hanteras:
 
-3. När man klickar in på ordern får man information om ordern och en karta där paketet ska levereras.
+```json
+{
+  "name": "efo",
+  "message": "hejsan"
+}
+```
 
-4. Använd GPS för att visa nuvarande position på kartan.
+1. Din chatt-klient bör dock vara såpass robust att den inte kraschar om data som kommer från servern inte uppfyller ovanstående format. Se till att ha någon form av felhantering.
 
-5. Lägg till möjligheten att ta ett foto när paketet levererats i order-vyn med kartan.
-
-6. När du har tagit ett kort ska det laddas upp till Foto-API tjänsten beskrivit i "[Kamera i mobilen](../kunskap/kamera-i-mobilen)".
-
-7. När bilden har laddats upp ska order-status ändras till status **Skickad (400)** och attributet `image_url` på ordern ska sättas till bild url'n vi precis laddade upp.
-
-8. Lägg till en vy som visar de levererade ordrar (status Skickad) och bilden som togs vid leverans.
-
-9. Gör det enkelt att testa din app. Ha minst en order med status Packad, som har en adress som fungerar och visas upp med en Geocoder/nominatim.
+1. Alla meddelanden tillsammans med användarenamn som kommer in via webbsocketen ska visas upp i chatten i din app.
