--- a/src/content/docs/uppgift/lager-appen-del-1.mdx
+++ b/src/content/docs/uppgift/lager-appen-del-1.mdx
@@ -1,38 +1,51 @@
 ---
-title: Lager appen del 1
+title: Lager appen del 2
 author: efo
 category: javascript
 revision:
-  "2023-03-02": (B, efo) Första utgåvan i samband med kursen webapp v5.
-  "2018-01-10": (A, efo) Första utgåvan i samband med kursen webapp v3.
+  "2023-03-21": (B, efo) Första utgåvan i samband med kursen webapp v3.
+  "2018-01-17": (A, efo) Första utgåvan i samband med kursen webapp v3.
 ---
 
-I denna uppgift skapar du grunden för en lager-app, du använder dina kunskaper från övningar och kurslitteratur för att skapa en SPA som är tillgängliga och användbar. Du hämtar JSON data från ett befintligt REST API och i denna första del ligger fokus på navigation och en enkel listning av produkter.
-
-
-
-Förkunskaper
------------------------
-Du har jobbat igenom övningarna "[Web Components](../kunskap/web-components)", "[Introduktion till Lager-API:t](../kunskap/introduktion-till-lager-api)" och "[Typografi i mobila enheter](../kunskap/typografi-i-mobila-enheter)".
+![image/webapp/pick-list.png](https://dbwebb.se/image/webapp/pick-list.png)
 
 
 
 Introduktion
 -----------------------
-Du har blivit kontaktat av företaget Infinity Warehouses då ryktet går på stan att du har koll på mobila applikationer. Infinity Warehouses vill ta steget in i 2000-talet och automatisera deras gamla omoderna lagerhanteringssystem. Infinity Warehouses har tidigare anställd en backend programmerare, men när hen hörde orden design, användbarhet och tillgänglighet sprang hen skrikande bort. Backend programmeraren hade dock hunnit skapa ett REST API innan hen försvann ner i serverrummet. [Dokumentationen för API:t](https://lager.emilfolino.se/v2) hjälper dig en bit på vägen.
+Du har blivit kontaktat av företaget Infinity Warehouses då ryktet går på stan att du har koll på mobila applikationer. Infinity Warehouses vill ta steget in i 2020-talet och automatisera deras gamla omoderna lagerhanteringssystem. Infinity Warehouses har tidigare anställd en backend programmerare, men när hen hörde orden design, användbarhet och tillgänglighet sprang hen skrikande bort. Backend programmeraren hade dock hunnit skapa ett REST API innan hen försvann ner i serverrummet. [Dokumentationen för API:t](https://lager.emilfolino.se/v2) hjälper dig en bit på vägen.
 
-I "[Introduktion till Lager-API:t](../kunskap/introduktion-till-lager-api)" har du skapat en API-nyckel och kopierat, alternativt skapat egna produkter.
+
+
+Förkunskaper
+-----------------------
+
+Du har jobbat dig igenom övningarna [Web Components](/kunskap/web-components), [Knappar för mobilen](../kunskap/knappar-for-mobilen) och [En router i JavaScript](../kunskap/en-router-i-javascript).
+
+
+
+Introduktion
+-----------------------
+
+Använd lager [API:t](https://lager.emilfolino.se/v2) dokumentationen och speciellt sektionen om order. Här kan du hämta ut ordern och alla orderrader. När du ska uppdatera lagersaldot använder du dig av `PUT` HTTP-metoden för produkterna.
 
 
 
 Krav
 -----------------------
-1. Skapa en webbapplikation anpassad för mobilen.
 
-1. Appen ska innehålla en lagerförteckningslista där produkterna listas med namn (`name`), lagersaldo (`stock`) och lagerplats (`location`).
+1. Skapa en vy där lagerarbetarna ser alla ordrar redo för att packas, dvs. ordrar med status ny.
 
-1. Driftsätt applikationen på Github Pages enligt (om du inte gjort det tidigare):
+1. Vyn visar alla varor i en order, hur många som ska plockas och vart varan finns.
 
-Gå till ditt `webapp-lager`-repo och under Settings>Pages välj "GitHub Actions" under Source enligt bilden nedan.
+1. Gör en kontroll om det finns tillräckligt många av varan för att den kan packas.
 
-<img src="/img/pages-enable-actions.png" alt="Enable GitHub Actions for GitHub Pages source" />
+1. Om det finns tillräckligt många produkter ska det finnas en möjlighet att byta status för ordern med en knapp. Byt till status Packad.
+
+1. När status för ordern ändras måste även lagersaldot för de packade varorna minskas. Viktigt att du gör ändringar för en produkt (`products`-endpointen) och inte för orderraderna.
+
+1. Gör ett medvetet val om du vill använda flat design eller ej.
+
+1. Se till att det går att testa din app. Lägg till minst en order med en produkt som går att packa.
+
+1. Driftsätt applikationen på Github Pages enligt [Driftsättning](/kunskap/web-components#driftsättning).
