--- a/src/content/docs/uppgift/lager-appen-del-2.mdx
+++ b/src/content/docs/uppgift/lager-appen-del-2.mdx
@@ -1,51 +1,56 @@
 ---
-title: Lager appen del 2
+title: Lager appen del 3
 author: efo
 category: javascript
 revision:
-  "2023-03-21": (B, efo) Första utgåvan i samband med kursen webapp v3.
+  "2023-03-24": (C, efo) Uppdaterade uppgiften för webapp v5.
+  "2019-03-04": (B, efo) Uppdaterade uppgiften för att passa API v2.
   "2018-01-17": (A, efo) Första utgåvan i samband med kursen webapp v3.
 ---
 
-![image/webapp/pick-list.png](https://dbwebb.se/image/webapp/pick-list.png)
+![image/webapp/truck.jpg](https://dbwebb.se/image/webapp/truck.jpg)
+
+I detta kursmoment skapar vi ett formulär för inleverans med hjälp av kunskapen från övningarna. Vi använder vår kunskap om att skapa lättanvända formulär för att snabbt kunna göra inleveranser på produkter.
 
 
 
-Introduktion
------------------------
-Du har blivit kontaktat av företaget Infinity Warehouses då ryktet går på stan att du har koll på mobila applikationer. Infinity Warehouses vill ta steget in i 2020-talet och automatisera deras gamla omoderna lagerhanteringssystem. Infinity Warehouses har tidigare anställd en backend programmerare, men när hen hörde orden design, användbarhet och tillgänglighet sprang hen skrikande bort. Backend programmeraren hade dock hunnit skapa ett REST API innan hen försvann ner i serverrummet. [Dokumentationen för API:t](https://lager.emilfolino.se/v2) hjälper dig en bit på vägen.
+
 
 
 
 Förkunskaper
 -----------------------
 
-Du har jobbat dig igenom övningarna [Web Components](/kunskap/web-components), [Knappar för mobilen](../kunskap/knappar-for-mobilen) och [En router i JavaScript](../kunskap/en-router-i-javascript).
-
+Du har gjort övningen [Ett mobilanpassad formulär](../kunskap/ett-mobilanpassad-formular).
 
 
 Introduktion
 -----------------------
 
-Använd lager [API:t](https://lager.emilfolino.se/v2) dokumentationen och speciellt sektionen om order. Här kan du hämta ut ordern och alla orderrader. När du ska uppdatera lagersaldot använder du dig av `PUT` HTTP-metoden för produkterna.
+En inleverans är när lagret får varor levererade och vi ska underlätta för lagerarbetarna att snabbt ta emot varor. I lager [API:t](https://lager.emilfolino.se/v2) finns en datatyp `deliveries` där alla inleveranser ska lagras och dessutom ska du uppdatera lagersaldot för den levererade produkten.
 
 
 
 Krav
 -----------------------
 
-1. Skapa en vy där lagerarbetarna ser alla ordrar redo för att packas, dvs. ordrar med status ny.
+1. Lista alla tidigare inleveranser, om det inte finns inleveranser visa upp ett meddelande om detta.
 
-1. Vyn visar alla varor i en order, hur många som ska plockas och vart varan finns.
+2. Gör en knapp för 'Ny inleverans' i list-vyn denna ska ta användaren till ett formulär.
 
-1. Gör en kontroll om det finns tillräckligt många av varan för att den kan packas.
+3. Använd dina kunskapar i att göra ett lättanvänd formulär där man kan göra inleverans av en produkt.
 
-1. Om det finns tillräckligt många produkter ska det finnas en möjlighet att byta status för ordern med en knapp. Byt till status Packad.
+4. Formuläret ska innehålla alla attribut för en inleverans förutom Leverans ID (id) dvs.:
 
-1. När status för ordern ändras måste även lagersaldot för de packade varorna minskas. Viktigt att du gör ändringar för en produkt (`products`-endpointen) och inte för orderraderna.
+* Produkt (product_id)
+* Antal (amount)
+* Leveransdatum (delivery_date)
+* Kommentar (comment)
 
-1. Gör ett medvetet val om du vill använda flat design eller ej.
+5. När formuläret skickas ska det skapas en inleverans i API:t.
 
-1. Se till att det går att testa din app. Lägg till minst en order med en produkt som går att packa.
+5. Lagersaldot för produkten ska ökas med den levererade mängden.
 
-1. Driftsätt applikationen på Github Pages enligt [Driftsättning](/kunskap/web-components#driftsättning).
+7. Använd ett `select`-element för att välja produkten som har levererats. Designa `select`-elementet så det passar in i resten av stilen för formuläret.
+
+8. Använd ett `textarea`-element för kommentaren. Designa `textarea`-elementet så det passar in i resten av stilen för formuläret. Använd ett lämpligt standard-värde (default) för textarean.
