--- a/src/content/docs/uppgift/lager-appen-del-3.mdx
+++ b/src/content/docs/uppgift/lager-appen-del-3.mdx
@@ -1,16 +1,15 @@
 ---
-title: Lager appen del 3
+title: Lager appen del 4
 author: efo
 category: javascript
 revision:
-  "2023-03-24": (C, efo) Uppdaterade uppgiften för webapp v5.
-  "2019-03-04": (B, efo) Uppdaterade uppgiften för att passa API v2.
-  "2018-01-17": (A, efo) Första utgåvan i samband med kursen webapp v3.
+  "2023-03-28": (B, efo) Uppdatering i samband med webapp-v5.
+  "2018-02-12": (A, efo) Första utgåvan i samband med kursen webapp v3.
 ---
 
-![image/webapp/truck.jpg](https://dbwebb.se/image/webapp/truck.jpg)
+![image/webapp/money.jpeg](https://dbwebb.se/image/webapp/money.jpeg)
 
-I detta kursmoment skapar vi ett formulär för inleverans med hjälp av kunskapen från övningarna. Vi använder vår kunskap om att skapa lättanvända formulär för att snabbt kunna göra inleveranser på produkter.
+I kursmoment 3 arbetade vi med formulär. Vi ska i denna uppgift skapa delar av appen som är skyddad med hjälp av JWT. I den skyddade delen ska det vara möjligt att se tidigare fakturor och skicka nya.
 
 
 
@@ -20,37 +19,37 @@ I detta kursmoment skapar vi ett formulär för inleverans med hjälp av kunskap
 
 Förkunskaper
 -----------------------
+Du har gjort uppgiften [Lager appen del 3](../uppgift/lager-appen-del-3). Du har jobbat dig igenom övningarna [Tabeller i mobila enheter](../kunskap/tabeller-i-mobila-enheter) och [Login med JWT](../kunskap/login-med-jwt).
 
-Du har gjort övningen [Ett mobilanpassad formulär](../kunskap/ett-mobilanpassad-formular).
 
 
 Introduktion
 -----------------------
 
-En inleverans är när lagret får varor levererade och vi ska underlätta för lagerarbetarna att snabbt ta emot varor. I lager [API:t](https://lager.emilfolino.se/v2) finns en datatyp `deliveries` där alla inleveranser ska lagras och dessutom ska du uppdatera lagersaldot för den levererade produkten.
+Använd lager [API:t](https://lager.emilfolino.se/v2) dokumentationen och speciellt sektionen om invoices. Här kan du hämta ut alla invoices och skapa nya.
 
 
 
 Krav
 -----------------------
 
-1. Lista alla tidigare inleveranser, om det inte finns inleveranser visa upp ett meddelande om detta.
+1. Skapa ett formulär för att kunna registrera och logga in som en användare i Lager appen.
 
-2. Gör en knapp för 'Ny inleverans' i list-vyn denna ska ta användaren till ett formulär.
+1. Bakom de skyddade delarna ska faktura vyerna ligga.
 
-3. Använd dina kunskapar i att göra ett lättanvänd formulär där man kan göra inleverans av en produkt.
+1. Skapa ett formulär för att göra om en order till en faktura. Ändra orderns status till 'fakturerad' enligt API:t.
 
-4. Formuläret ska innehålla alla attribut för en inleverans förutom Leverans ID (id) dvs.:
+1. Det ska inte gå att fakturera en order två gånger.
 
-* Produkt (product_id)
-* Antal (amount)
-* Leveransdatum (delivery_date)
-* Kommentar (comment)
+1. Skapa en tabell med information om befintliga fakturor, välj själv vilken information som ska finnas.
 
-5. När formuläret skickas ska det skapas en inleverans i API:t.
+1. Tabellen ska fungera på alla enheter, gör ett medvetet val av design.
 
-5. Lagersaldot för produkten ska ökas med den levererade mängden.
+1. Din app måste innehålla en CSP, som bara tillåter precis det som behövs hämtas för att undvika XSS-attacker och liknande.
 
-7. Använd ett `select`-element för att välja produkten som har levererats. Designa `select`-elementet så det passar in i resten av stilen för formuläret.
 
-8. Använd ett `textarea`-element för kommentaren. Designa `textarea`-elementet så det passar in i resten av stilen för formuläret. Använd ett lämpligt standard-värde (default) för textarean.
+
+Extrauppgift
+-----------------------
+
+* Lägg till felmeddelanden i registrerings/inloggnings-formuläret för användaren får en förståelse för vad som blev fel.
