--- a/src/content/docs/kmom/kmom01.mdx
+++ b/src/content/docs/kmom/kmom01.mdx
@@ -6,9 +6,11 @@ revision:
   "2023-03-01": (A, efo) Första utgåvan v5.
 
 ---
-
+import { Aside } from '@astrojs/starlight/components';
 import { YouTube } from 'astro-embed';
 
+
+<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
 Tanken är att komma igång med utveckling av mobila applikationer. De mobila applikationerna utvecklar vi med tekniker baserade på HTML, CSS och JavaScript. Vi ser hur vi kan utnyttja dessa tekniker för att ändra innehållet utan att ladda om applikationen. Som ett första steg så läser vi på om grunderna och börjar så smått med det löpande projektet för alla sex kursmoment.
 
