--- a/src/content/docs/kmom/kmom03.mdx
+++ b/src/content/docs/kmom/kmom03.mdx
@@ -13,7 +13,8 @@ revision:
 
 
 import { YouTube } from 'astro-embed';
-
+import { Aside } from '@astrojs/starlight/components';
+<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
 I detta kursmoment fortsätter vi med att utveckla våra GUI komponenter från tidigare kursmoment. Vi skapar lättanvända formulärfält med hjälp av HTML5 och kopplar ihop fälten i formulär som är lätta att använda på små skärmar där kontext och möjligheten att skriva snabbt och enkelt saknas. I vår applikation lägger vi till möjligheten att skapa data via formulär.
 
