--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -6,6 +6,8 @@ template: splash
 
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 import { YouTube } from 'astro-embed';
+import { Aside } from '@astrojs/starlight/components';
+<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursen så länge denna gula rutan finns.</Aside>
 
 
 Välkommen till kursen Webbapplikationer för mobila enheter.
