--- a/src/content/docs/kmom/kmom04.mdx
+++ b/src/content/docs/kmom/kmom04.mdx
@@ -13,7 +13,8 @@ revision:
 ---
 
 import { YouTube } from 'astro-embed';
-
+import { Aside } from '@astrojs/starlight/components';
+<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
 Vi fortsätter med Lager appen och lägger till en funktion för att skapa fakturor utifrån en order. Alla ska inte kunna skapa fakturor så innan vi skapar faktura funktionen skapar vi inloggning och tittar på JSON Web Tokens för autentisering.
 
