--- a/src/content/docs/kmom/kmom10.mdx
+++ b/src/content/docs/kmom/kmom10.mdx
@@ -7,6 +7,9 @@ import environment from "../../../assets/environments.png";
 
 import { YouTube } from 'astro-embed';
 
+import { Aside } from '@astrojs/starlight/components';
+<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
+
 ![KAJT Logga](https://dbwebb.se/image/webapp/v4/kajt.jpg)
 
 Detta projekt utvecklas i samarbete med Branschprogrammet Kapacitet i järnvägstrafiken – [KAJT](https://kajt.org/). Projektet baseras på öppen data från Trafikverket och handlar om att visualisera förseningar i tågtrafiken
