--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,6 +7,7 @@ template: splash
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 import { YouTube } from 'astro-embed';
 import { Aside } from '@astrojs/starlight/components';
+
 <Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursen så länge denna gula rutan finns.</Aside>
 
 
@@ -55,7 +56,7 @@ Välkommen till kursen Webbapplikationer för mobila enheter.
 </CardGrid>
 
 <LinkCard
-  title="⚠️ kmom10 - projekt"
+  title="⚠️ kmom10 - Projekt"
   href="/kmom/kmom10"
   description="Vi skapar en app med förseningar i den Svenska Tågtrafiken."
 />
