--- a/src/content/docs/kmom/kmom02.mdx
+++ b/src/content/docs/kmom/kmom02.mdx
@@ -1,5 +1,5 @@
 ---
-title: kmom02 - formulär och crud
+title: kmom02 - Formulär och crud
 author:
   - mos
   - efo
@@ -14,6 +14,7 @@ revision:
 
 import { YouTube } from 'astro-embed';
 import { Aside } from '@astrojs/starlight/components';
+
 <Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
 Vi tar en titt på vilka begränsningar och utmaningar man står inför som användare av en mobil enhet. Vi bryter ut CSS koden från kmom01 till ett GUI komponentbaserad ramverk och lägger till fler GUI komponenter till vårt ramverk.
