--- a/src/content/docs/kunskap/en-router-i-javascript.mdx
+++ b/src/content/docs/kunskap/en-router-i-javascript.mdx
@@ -39,12 +39,12 @@ Vi börjar med att skapa filen `router.js` som kommer innehålla komponenten som
 ```javascript
 export default class Router extends HTMLElement {
     constructor() {
-        super();
+        super()
     }
 
     // connect component
     connectedCallback() {
-        this.innerHTML = "router-outlet";
+        this.innerHTML = "router-outlet"
     }
 }
 ```
@@ -53,37 +53,45 @@ I `main.js` definierar vi sedan ett `customElement` som vi ger namnet `router-ou
 
 ```javascript
 // router import
-import Router from "./router.js";
+import Router from "./router.js"
 
 // component imports
-import LagerTitle from "./components/lager-title.js";
-import ProductList from "./components/product-list.js";
-import SingleProduct from "./components/single-product.js";
+import LagerTitle from "./components/lager-title.js"
+import ProductList from "./components/product-list.js"
+import SingleProduct from "./components/single-product.js"
 
-customElements.define('router-outlet', Router);
+customElements.define('router-outlet', Router)
 
-customElements.define('lager-title', LagerTitle);
-customElements.define('product-list', ProductList);
-customElements.define('single-product', SingleProduct);
+customElements.define('lager-title', LagerTitle)
+customElements.define('product-list', ProductList)
+customElements.define('single-product', SingleProduct)
 ```
 
-I `index.html` tar vi bort alla andra komponenter och har bara `<router-outlet></router-outlet>`.
+I `index.html` tar vi bort `<product-list>` komponenten och har bara `<router-outlet></router-outlet>`.
 
 
 ```html
 <!doctype html>
-<html>
+<html lang="sv">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Lager-Components</title>
 
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="main.js" defer></script>
+    <script type="module" src="src/main.js" defer></script>
 </head>
+
 <body>
-    <router-outlet></router-outlet>
+    <header class="header">
+        <lager-title name="Emil"></lager-title>
+    </header>
+    <main class="main">
+        <router-outlet></router-outlet>
+    </main>
 </body>
+
 </html>
 ```
 
@@ -99,9 +107,9 @@ Till en början väljer vi att definiera våra routes direkt i konstruktorn i `R
 ```javascript
 export default class Router extends HTMLElement {
     constructor() {
-        super();
+        super()
 
-        this.currentRoute = "";
+        this.currentRoute = ""
 
         this.allRoutes = {
             "": {
@@ -112,16 +120,16 @@ export default class Router extends HTMLElement {
                 view: "<packlist-view></packlist-view>",
                 name: "Plocklista",
             }
-        };
+        }
     }
 
     get routes() {
-        return this.allRoutes;
+        return this.allRoutes
     }
 
     // connect component
     connectedCallback() {
-        this.innerHTML = "router-outlet";
+        this.innerHTML = "router-outlet"
     }
 }
 ```
@@ -139,9 +147,9 @@ Jag har valt att dela upp det i tre delar, man hade säkert kunnat lösa det med
 ```javascript
 export default class Router extends HTMLElement {
     constructor() {
-        super();
+        super()
 
-        this.currentRoute = "";
+        this.currentRoute = ""
 
         this.allRoutes = {
             "": {
@@ -152,30 +160,30 @@ export default class Router extends HTMLElement {
                 view: "<packlist-view></packlist-view>",
                 name: "Plocklista",
             }
-        };
+        }
     }
 
     get routes() {
-        return this.allRoutes;
+        return this.allRoutes
     }
 
     // connect component
     connectedCallback() {
         window.addEventListener('hashchange', () => {
-            this.resolveRoute();
-        });
+            this.resolveRoute()
+        })
 
-        this.resolveRoute();
+        this.resolveRoute()
     }
 
     resolveRoute() {
-        this.currentRoute = location.hash.replace("#", "");
+        this.currentRoute = location.hash.replace("#", "")
 
-        this.render();
+        this.render()
     }
 
     render() {
-        this.innerHTML = this.routes[this.currentRoute]?.view || "<not-found></not-found>";
+        this.innerHTML = this.routes[this.currentRoute]?.view || "<not-found></not-found>"
     }
 }
 ```
